working on overflow mobile scroll issue

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -91,9 +91,6 @@
     font-family: "Exo", sans-serif;
     height: 100%;
     background-color: black;
-    position: fixed;
-    width: 100%;
-    overflow: hidden;
   }
 
   body {
@@ -103,23 +100,10 @@
     background-color: black;
     width: 100%;
     height: 100%;
-    overflow: hidden;
-    position: fixed;
-    touch-action: none;
-    -webkit-overflow-scrolling: touch;
-  }
-
-  .scrollable-content {
-    width: 100%;
-    height: 100%;
-    overflow-y: scroll;
-    -webkit-overflow-scrolling: touch;
-    position: absolute;
+    /* Allow vertical scrolling */
+    overflow: auto;
+    position: relative;
     touch-action: pan-y;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
   }
 }
 
